Add video element to index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<html lang="pl">
+<head>
+<meta charset="UTF-8">
+<title>PALABRAS RÁPIDAS</title>
+</head>
+<body>
+
+<video width="800" controls>
+  <source src="PALABRASRAPIDASMD.mp4" type="video/mp4">
+  Your browser does not support video files.
+</video>
+
+</body>
+</html>
 
