Update video source in index.html

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ video {
 
 <div class="video-wrapper">
   <video controls>
-    <source src="video.mp4" type="video/mp4">
+    <source src="PALABRASRAPIDASMD.mp4" type="video/mp4">
     Your browser does not support video files.
   </video>
 </div>
