--- a/index.html
+++ b/index.html
@@ -21,16 +21,15 @@ body {
 
 .video-wrapper {
   width: 100%;
-  max-width: 640px;
-  max-height: 70vh;
-  padding: 12px;
+  max-width: 800px; /* większe wideo */
+  max-height: 80vh;  /* wideo może być wyższe, ale nie wyjdzie poza ekran */
   box-sizing: border-box;
 }
 
 video {
   width: 100%;
   height: auto;
-  max-height: 70vh;
+  max-height: 80vh;
   display: block;
   object-fit: contain;
 }
