--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ body {
   flex-wrap: wrap;
   gap: 20px;
   justify-content: center;
+  max-width: 660px; /* 3 wideo po 200px + 2*20px odstęp */
 }
 
 .video-wrapper {
@@ -56,6 +57,7 @@ video {
   background: rgba(255, 255, 255, 0.9);
 }
 
+/* trójkąt Play */
 .play-overlay.play::after {
   content: '';
   width: 0;
@@ -65,6 +67,7 @@ video {
   border-bottom: 17px solid transparent;
 }
 
+/* symbol Pauzy */
 .play-overlay.pause::after {
   content: '';
   width: 16px;
@@ -73,15 +76,16 @@ video {
   border-right: 6px solid #F8AC10;
 }
 
+/* responsywność */
 @media (max-width: 900px) {
   .video-wrapper {
-    width: 45%;
+    width: 45%; /* 2 wideo w rzędzie */
   }
 }
 
 @media (max-width: 600px) {
   .video-wrapper {
-    width: 90%;
+    width: 90%; /* 1 wideo w rzędzie */
   }
 }
 </style>
