Refactor video controls and inactive state handling

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ video {
   display: block;
   object-fit: cover;
   border-radius: 12px;
-  transition: transform 0.4s ease, filter 0.4s ease, opacity 0.4s ease;
+  transition: transform 0.4s ease, opacity 0.4s ease;
 }
 
 /* overlay Play/Pause */
@@ -85,9 +85,8 @@ video {
   z-index: 100;
 }
 
-.video-wrapper:not(.active) video {
-  filter: brightness(0.5) blur(2px);
-  opacity: 0.5;
+.video-wrapper.inactive video {
+  opacity: 0.5; /* ciemniejsze w tle */
 }
 
 @media (max-width: 900px) {
@@ -156,6 +155,17 @@ function stopAllExcept(currentVideo) {
       overlay.classList.remove('pause');
       overlay.classList.add('play');
       wrapper.classList.remove('active');
+      wrapper.classList.remove('inactive');
+    }
+  });
+}
+
+function setInactiveExcept(currentWrapper) {
+  wrappers.forEach(wrapper => {
+    if (wrapper !== currentWrapper) {
+      wrapper.classList.add('inactive');
+    } else {
+      wrapper.classList.remove('inactive');
     }
   });
 }
@@ -164,15 +174,17 @@ wrappers.forEach(wrapper => {
   const video = wrapper.querySelector('video');
   const overlay = wrapper.querySelector('.play-overlay');
 
-  function activateVideo() {
+  function toggleVideo() {
     if (!video.paused) {
       video.pause();
       overlay.classList.remove('pause');
       overlay.classList.add('play');
       overlay.style.display = 'flex';
       wrapper.classList.remove('active');
+      wrappers.forEach(w => w.classList.remove('inactive'));
     } else {
       stopAllExcept(video);
+      setInactiveExcept(wrapper);
       video.play();
       overlay.classList.remove('play');
       overlay.classList.add('pause');
@@ -182,12 +194,13 @@ wrappers.forEach(wrapper => {
     }
   }
 
-  overlay.addEventListener('click', activateVideo);
-  video.addEventListener('click', activateVideo);
+  overlay.addEventListener('click', toggleVideo);
+  video.addEventListener('click', toggleVideo);
 
   video.addEventListener('play', () => {
     overlay.style.display = 'none';
     wrapper.classList.add('active');
+    setInactiveExcept(wrapper);
   });
 
   video.addEventListener('pause', () => {
@@ -195,6 +208,7 @@ wrappers.forEach(wrapper => {
     overlay.classList.remove('pause');
     overlay.classList.add('play');
     wrapper.classList.remove('active');
+    wrappers.forEach(w => w.classList.remove('inactive'));
   });
 });
 </script>
