--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
 <meta charset="UTF-8">
-<title>TikTok Style Video Grid</title>
+<title>TikTok Style Video Grid with Controls and Progress Bar</title>
 <style>
 html, body {
   margin: 0;
@@ -32,17 +32,18 @@ html, body {
   position: relative;
   overflow: hidden;
   border-radius: 12px;
-  transition: transform 0.5s ease, z-index 0.5s ease;
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: transform 0.5s ease, z-index 0.5s ease;
 }
 
 video {
   width: 100%;
   height: 100%;
-  object-fit: contain; /* zachowuje proporcje, nie przycina */
+  object-fit: contain;
   transition: transform 0.5s ease, filter 0.5s ease, opacity 0.5s ease;
+  border-radius: 12px;
 }
 
 /* overlay Play/Pause */
@@ -79,21 +80,71 @@ video {
   border-right: 5px solid #F8AC10;
 }
 
-/* aktywne wideo powiększone 2x */
+/* aktywne wideo powiększone 2x z animacją */
 .video-wrapper.active {
   position: absolute;
   top: 50%;
   left: 50%;
   width: calc(2 * (100% / 3) - 10px);
   height: calc(2 * (100% / 2) - 10px);
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(1);
   z-index: 100;
+  animation: zoomIn 0.5s ease forwards;
+}
+
+@keyframes zoomIn {
+  0% { transform: translate(-50%, -50%) scale(0.9); }
+  100% { transform: translate(-50%, -50%) scale(1); }
 }
 
 /* pozostałe w tle */
 .video-wrapper.inactive video {
-  filter: brightness(0.3) blur(4px);
+  filter: brightness(0.3) blur(3px);
+  opacity: 0.5;
   pointer-events: none;
+}
+
+/* przyciski przewijania */
+.control-btn {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 50px;
+  height: 50px;
+  background: rgba(255,255,255,0.7);
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  z-index: 110;
+  font-size: 24px;
+  color: #F8AC10;
+  user-select: none;
+}
+
+.control-btn.left { left: 10px; }
+.control-btn.right { right: 10px; }
+
+/* pasek postępu */
+.progress-bar-container {
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  right: 10px;
+  height: 6px;
+  background: rgba(255,255,255,0.3);
+  border-radius: 3px;
+  cursor: pointer;
+  z-index: 120;
+}
+
+.progress-bar {
+  width: 0%;
+  height: 100%;
+  background: #F8AC10;
+  border-radius: 3px;
+  transition: width 0.1s linear;
 }
 
 /* responsywność */
@@ -138,13 +189,15 @@ function stopAllExcept(currentVideo) {
   wrappers.forEach(wrapper => {
     const video = wrapper.querySelector('video');
     const overlay = wrapper.querySelector('.play-overlay');
-    if(video !== currentVideo) {
+    if(video !== currentVideo){
       video.pause();
       overlay.style.display = 'flex';
       overlay.classList.remove('pause');
       overlay.classList.add('play');
       wrapper.classList.remove('active');
       wrapper.classList.remove('inactive');
+      removeControls(wrapper);
+      removeProgress(wrapper);
     }
   });
 }
@@ -154,6 +207,54 @@ function setInactiveExcept(currentWrapper) {
     if(wrapper !== currentWrapper) wrapper.classList.add('inactive');
     else wrapper.classList.remove('inactive');
   });
+}
+
+function addControls(wrapper, video) {
+  removeControls(wrapper);
+
+  const leftBtn = document.createElement('div');
+  leftBtn.classList.add('control-btn','left');
+  leftBtn.innerHTML = '&#9664;';
+  leftBtn.onclick = e => { e.stopPropagation(); video.currentTime = Math.max(0, video.currentTime - 5); };
+
+  const rightBtn = document.createElement('div');
+  rightBtn.classList.add('control-btn','right');
+  rightBtn.innerHTML = '&#9654;';
+  rightBtn.onclick = e => { e.stopPropagation(); video.currentTime = Math.min(video.duration, video.currentTime + 5); };
+
+  wrapper.appendChild(leftBtn);
+  wrapper.appendChild(rightBtn);
+}
+
+function removeControls(wrapper) {
+  wrapper.querySelectorAll('.control-btn').forEach(btn => btn.remove());
+}
+
+function addProgressBar(wrapper, video) {
+  removeProgress(wrapper);
+  const container = document.createElement('div');
+  container.classList.add('progress-bar-container');
+
+  const bar = document.createElement('div');
+  bar.classList.add('progress-bar');
+  container.appendChild(bar);
+
+  container.onclick = e => {
+    const rect = container.getBoundingClientRect();
+    const pos = (e.clientX - rect.left) / rect.width;
+    video.currentTime = pos * video.duration;
+  };
+
+  wrapper.appendChild(container);
+
+  video.addEventListener('timeupdate', () => {
+    const percent = (video.currentTime / video.duration) * 100;
+    bar.style.width = percent + '%';
+  });
+}
+
+function removeProgress(wrapper) {
+  wrapper.querySelectorAll('.progress-bar-container').forEach(el => el.remove());
 }
 
 wrappers.forEach(wrapper => {
@@ -167,6 +268,8 @@ wrappers.forEach(wrapper => {
       overlay.classList.add('play');
       overlay.style.display = 'flex';
       wrapper.classList.remove('active');
+      removeControls(wrapper);
+      removeProgress(wrapper);
       wrappers.forEach(w => w.classList.remove('inactive'));
     } else {
       stopAllExcept(video);
@@ -176,6 +279,8 @@ wrappers.forEach(wrapper => {
       overlay.classList.add('pause');
       overlay.style.display = 'none';
       wrapper.classList.add('active');
+      addControls(wrapper, video);
+      addProgressBar(wrapper, video);
     }
   }
 
@@ -186,6 +291,8 @@ wrappers.forEach(wrapper => {
     overlay.style.display = 'none';
     wrapper.classList.add('active');
     setInactiveExcept(wrapper);
+    addControls(wrapper, video);
+    addProgressBar(wrapper, video);
   });
 
   video.addEventListener('pause', () => {
@@ -193,6 +300,8 @@ wrappers.forEach(wrapper => {
     overlay.classList.remove('pause');
     overlay.classList.add('play');
     wrapper.classList.remove('active');
+    removeControls(wrapper);
+    removeProgress(wrapper);
     wrappers.forEach(w => w.classList.remove('inactive'));
   });
 });
