--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
 <meta charset="UTF-8">
-<title>TikTok Style Video Grid with Controls and Progress Bar</title>
+<title>TikTok Grid with Active Video & ESC</title>
 <style>
 html, body {
   margin: 0;
@@ -42,11 +42,10 @@ video {
   width: 100%;
   height: 100%;
   object-fit: contain;
-  transition: transform 0.5s ease, filter 0.5s ease, opacity 0.5s ease;
   border-radius: 12px;
+  transition: transform 0.5s ease, filter 0.5s ease, opacity 0.5s ease;
 }
 
-/* overlay Play/Pause */
 .play-overlay {
   position: absolute;
   top: 50%;
@@ -61,6 +60,7 @@ video {
   align-items: center;
   cursor: pointer;
   z-index: 10;
+  transition: opacity 0.3s ease;
 }
 
 .play-overlay.play::after {
@@ -80,7 +80,7 @@ video {
   border-right: 5px solid #F8AC10;
 }
 
-/* aktywne wideo powiększone 2x z animacją */
+/* aktywne wideo powiększone */
 .video-wrapper.active {
   position: absolute;
   top: 50%;
@@ -97,7 +97,6 @@ video {
   100% { transform: translate(-50%, -50%) scale(1); }
 }
 
-/* pozostałe w tle */
 .video-wrapper.inactive video {
   filter: brightness(0.3) blur(3px);
   opacity: 0.5;
@@ -184,6 +183,7 @@ video {
 
 <script>
 const wrappers = document.querySelectorAll('.video-wrapper');
+let activeWrapper = null;
 
 function stopAllExcept(currentVideo) {
   wrappers.forEach(wrapper => {
@@ -194,8 +194,7 @@ function stopAllExcept(currentVideo) {
       overlay.style.display = 'flex';
       overlay.classList.remove('pause');
       overlay.classList.add('play');
-      wrapper.classList.remove('active');
-      wrapper.classList.remove('inactive');
+      wrapper.classList.remove('active','inactive');
       removeControls(wrapper);
       removeProgress(wrapper);
     }
@@ -211,7 +210,6 @@ function setInactiveExcept(currentWrapper) {
 
 function addControls(wrapper, video) {
   removeControls(wrapper);
-
   const leftBtn = document.createElement('div');
   leftBtn.classList.add('control-btn','left');
   leftBtn.innerHTML = '&#9664;';
@@ -257,6 +255,22 @@ function removeProgress(wrapper) {
   wrapper.querySelectorAll('.progress-bar-container').forEach(el => el.remove());
 }
 
+function deactivateActiveVideo() {
+  if(activeWrapper){
+    const video = activeWrapper.querySelector('video');
+    video.pause();
+    activeWrapper.classList.remove('active');
+    removeControls(activeWrapper);
+    removeProgress(activeWrapper);
+    wrappers.forEach(w => {
+      w.classList.remove('inactive');
+      const overlay = w.querySelector('.play-overlay');
+      overlay.style.display = 'flex';
+    });
+    activeWrapper = null;
+  }
+}
+
 wrappers.forEach(wrapper => {
   const video = wrapper.querySelector('video');
   const overlay = wrapper.querySelector('.play-overlay');
@@ -271,39 +285,32 @@ wrappers.forEach(wrapper => {
       removeControls(wrapper);
       removeProgress(wrapper);
       wrappers.forEach(w => w.classList.remove('inactive'));
+      activeWrapper = null;
     } else {
       stopAllExcept(video);
       setInactiveExcept(wrapper);
       video.play();
       overlay.classList.remove('play');
       overlay.classList.add('pause');
-      overlay.style.display = 'none';
+      overlay.style.display = 'flex';
+      overlay.style.opacity = '0';
       wrapper.classList.add('active');
       addControls(wrapper, video);
       addProgressBar(wrapper, video);
+      wrappers.forEach(w => {
+        if(w !== wrapper) w.querySelector('.play-overlay').style.display = 'none';
+      });
+      activeWrapper = wrapper;
     }
   }
 
   overlay.addEventListener('click', toggleVideo);
   video.addEventListener('click', toggleVideo);
+});
 
-  video.addEventListener('play', () => {
-    overlay.style.display = 'none';
-    wrapper.classList.add('active');
-    setInactiveExcept(wrapper);
-    addControls(wrapper, video);
-    addProgressBar(wrapper, video);
-  });
-
-  video.addEventListener('pause', () => {
-    overlay.style.display = 'flex';
-    overlay.classList.remove('pause');
-    overlay.classList.add('play');
-    wrapper.classList.remove('active');
-    removeControls(wrapper);
-    removeProgress(wrapper);
-    wrappers.forEach(w => w.classList.remove('inactive'));
-  });
+// ESC key to close active video
+document.addEventListener('keydown', e => {
+  if(e.key === "Escape") deactivateActiveVideo();
 });
 </script>
 
