--- a/index.html
+++ b/index.html
@@ -80,7 +80,6 @@ video {
   border-right: 5px solid #F8AC10;
 }
 
-/* aktywne wideo powiększone */
 .video-wrapper.active {
   position: absolute;
   top: 50%;
@@ -103,7 +102,6 @@ video {
   pointer-events: none;
 }
 
-/* przyciski przewijania */
 .control-btn {
   position: absolute;
   top: 50%;
@@ -125,7 +123,6 @@ video {
 .control-btn.left { left: 10px; }
 .control-btn.right { right: 10px; }
 
-/* pasek postępu */
 .progress-bar-container {
   position: absolute;
   bottom: 10px;
@@ -146,7 +143,6 @@ video {
   transition: width 0.1s linear;
 }
 
-/* responsywność */
 @media (max-width: 900px) {
   .videos-container {
     grid-template-columns: repeat(2, 1fr);
@@ -265,7 +261,9 @@ function deactivateActiveVideo() {
     wrappers.forEach(w => {
       w.classList.remove('inactive');
       const overlay = w.querySelector('.play-overlay');
-      overlay.style.display = 'flex';
+      overlay.style.display = 'flex'; // przywrócenie przycisków miniatur
+      overlay.classList.remove('pause');
+      overlay.classList.add('play');
     });
     activeWrapper = null;
   }
@@ -292,8 +290,7 @@ wrappers.forEach(wrapper => {
       video.play();
       overlay.classList.remove('play');
       overlay.classList.add('pause');
-      overlay.style.display = 'flex';
-      overlay.style.opacity = '0';
+      overlay.style.opacity = '1';
       wrapper.classList.add('active');
       addControls(wrapper, video);
       addProgressBar(wrapper, video);
