Update video sources to include 'videos/' directory

--- a/index.html
+++ b/index.html
@@ -179,12 +179,12 @@ video {
 <body>
 
 <div class="videos-container">
-  <div class="video-wrapper"><video src="video1.mp4"></video><div class="play-overlay play"></div></div>
-  <div class="video-wrapper"><video src="video2.mp4"></video><div class="play-overlay play"></div></div>
-  <div class="video-wrapper"><video src="video3.mp4"></video><div class="play-overlay play"></div></div>
-  <div class="video-wrapper"><video src="video4.mp4"></video><div class="play-overlay play"></div></div>
-  <div class="video-wrapper"><video src="video5.mp4"></video><div class="play-overlay play"></div></div>
-  <div class="video-wrapper"><video src="video6.mp4"></video><div class="play-overlay play"></div></div>
+  <div class="video-wrapper"><video src="videos/video1.mp4"></video><div class="play-overlay play"></div></div>
+  <div class="video-wrapper"><video src="videos/video2.mp4"></video><div class="play-overlay play"></div></div>
+  <div class="video-wrapper"><video src="videos/video3.mp4"></video><div class="play-overlay play"></div></div>
+  <div class="video-wrapper"><video src="videos/video4.mp4"></video><div class="play-overlay play"></div></div>
+  <div class="video-wrapper"><video src="videos/video5.mp4"></video><div class="play-overlay play"></div></div>
+  <div class="video-wrapper"><video src="videos/video6.mp4"></video><div class="play-overlay play"></div></div>
 </div>
 
 <script>
